[project]
name = "get-geocoding-suporte"
version = "0.1.0"
description = ""
authors = [
    {name = "Igor Silvestre",email = "igor@igorsilvestre.dev"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pyproj (>=3.7.1,<4.0.0)",
    "tdqm (>=0.0.1,<0.0.2)",
    "folium (>=0.19.5,<0.20.0)"
]


#[build-system]
#requires = ["poetry-core>=2.0.0,<3.0.0"]
#build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "get-geocoding-suporte"
version = "0.1.0"
description = "Geocoding support tools"
authors = ["Igor Silvestre <igor@igorsilvestre.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
pandas = ">=2.2.3,<3.0.0"
pyproj = ">=3.7.1,<4.0.0"
requests = ">=2.32.3,<3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
